Criptografia da senha do usuário com MD5